# beginners-py-learn

./: LICENSE  README.md  building_binary_files_for_python_scripts.md  ci-cd-pipeline.md  create_binary_files_for_python_scripts.md  github-101.md  how-to-use-github.md  pm-checklist.md  prod-deploy-checklist.md  python_environment_setup.md  requirements.txt  scratch  setup.py  setup_conda_env.md  simple_git_setup_common_msitakes.md
brownfield/: brownfield.md  migration.md
cheatsheet/: python-beginner-cheatsheet.md  python-data-engineer-cheatsheet.html  python-data-engineer-cheatsheet.md  python-data-scientist-cheatsheet.html  python-data-scientist-cheatsheet.md  python_environment_setup.md  quick-review.md
ci-cd-pipeline/: ci-cd-pipeline.md  mock_ci_cd_pipeline.py
dsa/: data-structures-algorithms.md  how-is-stack-managed.md  iterative_vs_recusive.md  readme.md
dsa/binary_search/: binary_search_iterative.py  bineary_search.py  bst-binary_seatch_tree.md  readme.md
dsa/sort/: readme.md
handbook/: 10_python_features_you_should_be_using.md  PYTHON_HANDBOOK.md  README.md  big_o_notation.md  cloud-devops-guide.md  database-operations-guide.md  excel_primer.md  interview-prep-supplement.md  ml-workflow-guide.md  python-study-guide-part2.md  python-study-guide-part3.md  python-study-guide.html  python-study-guide.md  python_threading_locks_guide.md  quick-reference-cards.md  security-best-practices.md  web-development-guide.md
handbook/jupyter-notebook/: jupyter_setup_and_tutorial.md  jupyter_tutorial.ipynb
handbook/pandas_dataframe/: pandas_dataframe_tutorial.md  pandas_filter_groupby_agg_sql.ipynb  pandas_tutorial.py
handbook/paths/: data-engineer-path.md  data-scientist-path.md  devops-engineer-path.md  software-engineer-path.md
handbook/projects/: 01-todo-app-fullstack.md  02-etl-pipeline.md  03-ml-model-api.md  04-realtime-chat.md  05-ecommerce-backend.md  README.md
help/: datatype.md  date-time.md  file-operations  learn.md  learning-structure.md  map-filter-reduce.md  notes.md  pipenv.md  python-games.md  self-help.md  tuple-set-dictionary.md  webscraping.md
help/aws/: s3-select
help/quick101/: env.md  exception.md  ooo-basics.md  traceback-exception.md
quick101/: __init__-py.md  about_my_node.py  apache_superset.md  apache_superset_with_csv.md  check-my-python-setup.md  coding_with_ai.md  custom_exeption.py  datatype.md  date-time.md  debugging-with-python.md  download_from_url.py  dunder-vs-contextmanager.md  exception.md  file-operations.md  flatten-iterables.md  folder_to_index_file_generator.py  init-and-new.md  lambda-functions.md  linter-misc.md  logger-like-log4j-in-java.md  logger-override.py  logging_basics.md  map-filter-reduce.md  ooo-basics.md  package_dependency_analyzer.py  pipenv.md  port-pid-check.md  public_private_protected_concept.md  python-games.md  regex-basics.md  regex.md  requirements_generator.py  self-help.md  traceback-exception.md  tuple-set-dictionary.md  unix_commands.md  user_access_check.md  vulnerability-check.md  webscraping.md  who_called_me.py
quick101/best_practices/: README.md  best_practice_one.py
quick101/code_review/: code_coverage.md  code_coverage_overview.md  code_review.py  code_review_setup.md  functional_testing_guide.md  pycharm_seup.md  run_code_review.py  secrets-linter.md
quick101/create_mock_data/: faker.md
quick101/debugging/: break_system_packages.md  check-my-python-setup.md  check_port_access.md  cleanup_lib_to_bare_min_trace.md  cleanup_lib_to_bare_minimum.md  debugging-with-python.md  file_trace.md  file_trace.py  fine_grained_trace_usage.md  jq-json_query.md  other_options_besides_tracestrace.md  override_buildin_print.md  override_default_logging.md  pip-install-errors.md  pseudo_run_code.md  python-sync-all-modules.md  python_module_path_setup.md  simple_debugging_on_linux.md  strace.md  trace.md  virtaul-env.md
quick101/dev-ops/: aws-sam-and-localstack.md  azure-localstack.md  demo_ci_cd_pipeline_aws_cloud.md  here-are -steps-to-creating-a-demo.md  readme.md
quick101/dunder-methods/: attribute-management.md  readme.md
quick101/exec/: how_exec_works.md  when_to_use_exec.md
quick101/how-to-git/: how-to-add-sshkey-to-repo.md
quick101/pycharm-ide-settings/: readme.md
quick101/python_import_order/: import_path_analyzer  import_tracker.py  python_import_sequence.md  static_analyser.py
quick101/serialization/: save_myclass_state.py  save_state.py  (+2 more)
security/: baseline_security_issuse.md
security_scanner/: PATH_MANIPULATION_GUIDE.md  QUICKSTART.md  README.md  extract_fpr.py  extract_fpr_to_csv.py  fortify_mock_scanner.py  fpr_analysis.md  path_manipulation_test.py
src/: 0-learn_variables.py  0.1-learn-double-divisor.py  0.1-learn.py  1-learn_loop.py  1-learn_variables.py  10-disassemble.py  11-basic-file-operations.md  11-file-operation.py  11-more-file-operations.md  12-sort-list.md  13-sort-dict-by-key.md  14-sort-list-dict.md  15-pydantic.md  16-list_comp_vs_generator.md  16-list_comp_vs_generator_examples.py  2-learn_ifelse.py  3-learn-array-sequence-slice.py  3-learn-array-solution1.py  3-learn_array.py  4-learn_functions.py  5-learn_dictionary.py  6-learn_json_str_to_python_data_struct.py  7-learn_python_datastruct_to_json_str.py  8-learn_program.py  8-learn_python_by_solving.py  9-learn_program.py  advanced-decorator.py  data_time_precison.py  finally-indentation.py  how-does-a-program-run.md
src/advance_stuff/ci-cd-pipeline/: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  what-is-pyproject_toml.md
src/advance_stuff/ci-cd-pipeline/data/: sample_employees.json  sample_orders.csv
src/advance_stuff/ci-cd-pipeline/docker/: Dockerfile  docker-compose.yml
src/advance_stuff/ci-cd-pipeline/scripts/: ci_runner.py  deploy.py  run_pipeline.sh
src/advance_stuff/ci-cd-pipeline/src/myapp/: __init__.py  api.py  config.py  main.py  utils.py
src/advance_stuff/ci-cd-pipeline/src/myapp/etl/: __init__.py  cli.py  examples.py  pipeline.py
src/advance_stuff/ci-cd-pipeline/tests/: conftest.py  test_api.py  test_etl.py  test_main.py  test_utils.py
(+431 files in other folders)
